New Windows Phone 8.1 added and converted the whole solution to a Universal App Also fixed a minor issue I encounter with the outh_verifier param

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-js/config.js
-bin/*
-bld/*
-winjs-oauth-for-twitter_TemporaryKey.pfx
+src/winjs-oauth-for-twitter/bin
+src/winjs-oauth-for-twitter/obj
+src/winjs-oauth-for-twitter.Phone/bin
+src/winjs-oauth-for-twitter.Phone/obj
